--- a/valentine.html
+++ b/valentine.html
@@ -6,7 +6,7 @@
   <title>For My BABY DINO</title>
   <style>
     body {
-      font-family: 'Ophelia Lark';
+      font-family: 'American Typewriter';
       text-align: center;
       background-color: #FFa07a;
       color: #8B0000;
@@ -31,8 +31,8 @@
       margin-bottom: 30px;
     }
     img {
-      width: 150px;
-      height: 150px;
+      width: 200px;
+      height: 200px;
       border-radius: 0%;
       object-fit: cover;
       margin-bottom: 30px;
