--- a/valentine.html
+++ b/valentine.html
@@ -96,7 +96,7 @@
 
   <!-- Slide 3: Heartfelt Message -->
   <div class="slide">
-    <h1>You Mean Everything to Me</h1>
+    <h1>You Mean Everything to Me Re</h1>
     <p>Infact, i think our fate ends with us, 
     since no matter how many arguments we went through, 
     our love for eachother did remain the same right?</p>
